--- a/src/main/resources/static/formulario.html
+++ b/src/main/resources/static/formulario.html
@@ -55,7 +55,7 @@
     <div class="container">
       <a class="nav-link" id="cervezasNavBar" href="./Catalogo.html">CERVEZAS</a>
       <form class="d-flex d-lg-block col-sm-5 col-md-5 col-lg-5 ms-lg-5" role="search">
-        <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search">
+        <input class="form-control" type="search" placeholder="¿Qué buscas?" aria-label="Search" id="navbarBusqueda">
       </form>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
